base-installer (1.69) UNRELEASED; urgency=low

  * Add support for qemu on mips/mipsel, thanks to Aurelien Jarno.

 -- Thiemo Seufer <ths@debian.org>  Mon, 13 Nov 2006 15:09:34 +0000

base-installer (1.68) unstable; urgency=low

  [ Frans Pop ]
  * Clean up defaults for kernel/image-2.6. All were obsolete and thus
    obviously no longer needed.

  [ Joey Hess ]
  * Clean up defaults for kernel/image. All but i386 were obsolete and thus
    obviously no longer needed, and I'm sure we don't need a default 2.4
    kernel for i386 any longer.

  [ Updated translations ]
  * Belarusian (be.po) by Andrei Darashenka
  * German (de.po) by Jens Seidel
  * Estonian (et.po) by Siim Põder
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Tapio Lehtonen
  * Hindi (hi.po) by Nishant Sharma
  * Croatian (hr.po) by Josip Rodin
  * Italian (it.po) by Stefano Canepa
  * Korean (ko.po) by Sunjae park
  * Kurdish (ku.po) by Erdal Ronahi
  * Norwegian Bokmal (nb.po) by Bjørn Steensrud
  * Romanian (ro.po) by Eddy Petrișor
  * Albanian (sq.po) by Elian Myftiu
  * Tamil (ta.po) by Damodharan Rajalingam
  * Vietnamese (vi.po) by Clytie Siddall

 -- Frans Pop <fjp@debian.org>  Tue, 24 Oct 2006 13:53:47 +0200

base-installer (1.67) unstable; urgency=low

  [ Petter Reinholdtsen ]
  * Always use template base-installer/kernel/linux/extra-packages, even if
    base-installer/kernel/linux/extra-packages-$kernelver exists.
    Closes: #383896.

  [ dann frazier ]
  * Drop SMP detection on IA64. IA64 -smp flavours have been dropped.
    As of 2.6.17, all Debian IA64 kernels are SMP.

  [ Colin Watson ]
  * Mark ${ERROR} in base-installer/debootstrap/fallback-error as
    untranslatable.
  * Suppress a spurious "dmsetup: not found" error.

  [ Sven Luther ]
  * [powerpc] Added support for IBM Power5+ cpus.

  [ Updated translations ]
  * Bengali (bn.po) by Mahay Alam Khan (মাহে আলম খান)
  * Czech (cs.po) by Miroslav Kure
  * Danish (da.po) by Claus Hindsgaul