@@ -24,6 +24,5 @@ unusable \
   kernel-image-2.4.27-riscstation \
   linux-image-2.6-iop32x \
   linux-image-2.6-ixp4xx \
-  linux-image-2.6-nslu2 \
   linux-image-2.6-rpc \
   linux-image-2.6-s3c2410
