@@ -8,6 +8,5 @@ usable \
 unusable \
   linux-image-2.6-ixp4xx \
   linux-image-2.6-netwinder \
-  linux-image-2.6-nslu2 \
   linux-image-2.6-rpc \
   linux-image-2.6-s3c2410 \
