@@ -9,5 +9,4 @@ unusable \
   linux-image-2.6-iop32x \
   linux-image-2.6-ixp4xx \
   linux-image-2.6-netwinder \
-  linux-image-2.6-nslu2 \
   linux-image-2.6-s3c2410
