@@ -1,6 +1,10 @@
 base-installer (1.69) UNRELEASED; urgency=low
 
+  [ Thiemo Seufer ]
   * Add support for qemu on mips/mipsel, thanks to Aurelien Jarno.
+
+  [ Martin Michlmayr ]
+  * nslu2 uses the ixp4xx kernel now - update the test suite.
 
  -- Thiemo Seufer <ths@debian.org>  Mon, 13 Nov 2006 15:09:34 +0000
 
